--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -45,7 +45,7 @@ nav li:hover
 
 .sign-up
 {
-    padding-top: 3em;
+    padding: 3em 0 0 1.8em;
     background-color: unset;
     border: none;
     font-size: 16px;
@@ -125,7 +125,7 @@ input
 {
     display: flex;
     flex-flow: row wrap;
-    /*align-items: center;*/
+    align-items: center;
 }
 
 
@@ -140,8 +140,7 @@ input
 {
     display: flex;
     flex-flow: row wrap;
-    padding-top: 1em;
-    padding-left: 1em;
+    padding: 1em 0em 0 1em;
 }
 
 a
@@ -217,12 +216,12 @@ a
 .s2
 {
     display: flex;
-    margin: 2em 0 0 3em
+    margin: 0 3em 0 3em;
 }
 
 #logements
 {
-    padding-left: 1em;
+    padding: 1.5em 0 1em 1.5em;
     font-size: 18px;
     font-weight: bold;
 }
@@ -231,7 +230,7 @@ a
 {
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
-    padding: 1em 2em 0 2em;
+    /*padding: 1em 0 1em 0;*/
 }
 
 .presentation
@@ -248,7 +247,7 @@ a
     border-radius: 20px 20px 20px 20px;
     padding-bottom: 0.5em;
     margin-bottom: 2.5em;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
 }
 
 .image
@@ -262,7 +261,7 @@ a
 
 .ap
 {
-    padding: 0 0 2.5em 1em;
+    padding: 0 1em 2.5em 1.5em;
     font-size: 16px;
     font-weight: bold;
 }
@@ -282,7 +281,7 @@ a
 /*Populars'beginning*/
 aside
 {
-    margin: auto 3em auto 3em;
+    margin-left: 3em;
     padding: 0 1.2em 0 1.2em;
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
@@ -298,7 +297,7 @@ aside
     border-radius: 20px 20px 20px 20px;
     margin: 2em auto 2em auto;
     font-size: 16px;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
 }
 
 .image1
@@ -314,7 +313,7 @@ aside
 {
     display: flex;
     justify-content: space-between;
-    padding-top: 1.8em;
+    padding: 2.3em 0.5em 0 0;
     font-weight: bold;
     font-size: 18px;
 }
@@ -365,7 +364,6 @@ aside
 {
     font-size: 18px;
     padding-bottom: 1em;
-    /*padding-left: 0.5em;*/
 }
 
 .aa1
@@ -379,16 +377,15 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
     height: 550px;
-    padding-bottom: 0.9em;
 }
 
 .fp
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
     padding-bottom: 0.1em;
     margin-bottom: 1.5em;
 }
@@ -397,7 +394,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
     padding-bottom: 0.1em;
 }
 
@@ -405,7 +402,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
     padding-bottom: 0.1em;
     margin-bottom: 1em;
 }
@@ -414,25 +411,25 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px #f2f2f2;
-    padding-bottom: 0.1em;
+    box-shadow: 0 0 16px grey;
+    padding-bottom: 0.16em;
 }
 
 .cal
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px #f2f2f2;
+    box-shadow: 0 0 16px grey;
     height: 550px;
-    padding-bottom: 0.9em;
 }
 
 .image2
 {
     width: 310px;
-    height: 500px;
+    height: 495px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 16px grey;
 }
 
 .image3
@@ -441,6 +438,7 @@ aside
     height: 243px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 16px grey;
 }
 
 .image4
@@ -449,6 +447,7 @@ aside
     height: 170px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 16px grey;
 }
 
 .image5
@@ -457,6 +456,7 @@ aside
     height: 210px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 16px grey;
 }
 
 h3
@@ -494,5 +494,5 @@ footer ul
 }
 .title_ap
 {
-    padding-left: 3em;
+    padding-left: 3.4em;
 }
