--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -42,16 +42,20 @@
         padding-right: 1.25em;
     }
 
-    .sign-up
+    .n3
     {
         order: 1;
         padding: 1.2em 1.2em 0em 0;
         background-color: unset;
         border: none;
         font-size: 16px;
-        font-weight: bold;
         cursor: pointer;
-        color: #0065fc;
+    }
+
+    .sign-up
+    {
+        color:#0065fc;
+        font-weight: bold;
     }
 
     .sign-up:hover
@@ -158,7 +162,7 @@
     #ah1
     {
         background-color: white;
-        padding: 2em 1.2em 0 1.2em;
+        /*padding: 2em 1.2em 0 1.2em;*/
     }
     aside
     {
@@ -185,7 +189,7 @@
 
     #logements
     {
-        padding: 0;
+        padding: 1em 0 1em 1.2em;
         font-size: 20px;
     }
 
@@ -196,7 +200,7 @@
     
     /*Activities'beginning*/
 
-    .s3
+    #s3
     {
         padding: 0;
     }
@@ -207,12 +211,22 @@
         padding: 0 1.2em 0 1.2em;
     }
 
-    .vp, .fp, .if, .ndg, .pl, .cal
+    .vp, .cal
     {
         width: 343px;
         height: 150px;
         margin: 1em 0 1em 0;
         padding-bottom: 3.5em;
+    }
+
+    .fp
+    {
+        margin-bottom: 1em;
+    }
+
+    .ndgpl
+    {
+        margin-bottom: 1em;
     }
 
     .image2, .image3, .image4, .image5
@@ -224,7 +238,7 @@
 
     #visites
     {
-            padding: 0 1.2em 1em 1em;
+            padding: 0 1.2em 1em 1.2em;
             font-size: 20px;
     }
     
