--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -153,7 +153,7 @@
         padding: 0 1.2em 0 1.2em;
     }
 
-    .s2
+    #s2
     {
         margin: 0;
         flex-flow: column-reverse wrap;
