Responsive Design haute-résolution du 2 Avril 2021.

--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -242,7 +242,7 @@ a
     align-content: center;
 }
 
-.vignette
+.vignettes
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
