--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -1,7 +1,13 @@
 body
 {
     font-family: 'Raleway', sans-serif;
-    margin: auto;
+    margin: 0;
+}
+
+#main
+{
+    max-width: 1500px;
+    margin: 0 auto;
 }
 
 /*Header*/
@@ -19,6 +25,7 @@ nav ul
 {
     list-style: none;
     display: flex;
+    margin: 0;
 }
 
 nav li 
@@ -45,34 +52,41 @@ nav li:hover
 
 .sign-up
 {
-    padding: 3em 0 0 1.8em;
     background-color: unset;
     border: none;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
 }
-
-.sign-up:hover
-{
-    border-top: 2px solid #0065fc;
-}
 /*Navigation's ending*/
-
-h1
-{
-    font-size: 20px;
-}
 
 /*Beginning's top*/
 #s1
 {
-    padding: 0 3em 0 3em;
+    padding: 3em 3em 0 3em;
+}
+
+h1
+{
+    font-size: 20px;
+    margin: 0;
+}
+
+.pcvpn
+{
+    margin: 0;
+    padding: 1em 0 1em;
+}
+
+#ville_pays::placeholder
+{
+    color: black;
+    font-weight: bold;
 }
 
 .logo
 {
-    padding-top: 3em;
+    padding-top: 2em;
 }
 
 /*Begin's search*/
@@ -95,8 +109,6 @@ input
     border: 2px solid #f2f2f2;
     font-size: 15px;
     padding: 1em;
-    font-weight: bold;
-    color: black;
 }
 
 .marqueur_2
@@ -152,7 +164,7 @@ a
 {
     color:#0065fc;
     background-color: #deebff;
-    padding: 0.9em;
+    padding: 1em;
     border-radius: 100%;
     margin: 0 0.7em 0 -1em;
 }
@@ -174,7 +186,7 @@ a
     background-color: white;
     font-size: 15px;
     font-weight: bold;
-    padding: 0.8em 1em 0.8em 0;
+    padding: 0.9em 1em 0.8em 0;
 }
 
 .i1:hover, .i2:hover, .i3:hover, .i4:hover
@@ -190,6 +202,8 @@ a
 {
     display: flex;
     align-items: center;
+    padding: 2em 0 2em;
+    margin: 0;
 }
 
 .information
@@ -205,8 +219,7 @@ a
 
 .result
 {
-    font-size: 16px;  
-    margin-right: 2em;
+    font-size: 16px;
 }
 /*Results'ending*/
 
@@ -216,30 +229,32 @@ a
 #s2
 {
     display: flex;
-    margin: 0 3em 0 3em;
+    width: auto;
+    margin: 0 3em;
 }
 
 #logements
 {
-    padding: 1.5em 0 1em 1.4em;
     font-size: 18px;
     font-weight: bold;
     margin: 0;
+    padding-bottom: 2em;
 }
 
 #ah1
 {
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
-    /*padding: 1em 0 1em 0;*/
+    padding: 3em 2.5em 2em 2.5em;
+   
 }
 
 .presentation
 {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-    align-content: center;
+    justify-content: space-between;
+    align-content: center; 
 }
 
 .vignettes
@@ -247,24 +262,22 @@ a
     background-color: white;
     border-radius: 20px 20px 20px 20px;
     padding-bottom: 0.5em;
-    margin-bottom: 2.5em;
-    box-shadow: 0 0 16px grey;
+    margin-bottom: 2em;
+    box-shadow: 0 0 16px #f2f2f2;
 }
 
 .image
 {
-    width: 270px;
+    width: 250px;
     height: 150px;
     object-fit: cover;
     border-radius:20px 20px 0 0; 
-    border: 2px solid white;
+    border: 5px solid white;
 }
 
 .ap
 {
-    padding: 0 1em 2.5em 1.6em;
-    font-size: 16px;
-    font-weight: bold;
+    padding: 0;
 }
 
 .ap:hover
@@ -277,13 +290,19 @@ a
     padding-left:0.7em; 
     font-weight: bold;
 }
+
+.text_photo
+{
+    padding: 0 1em;
+    margin: 0;
+}
 /*Accomodations'ending*/
 
 /*Populars'beginning*/
 aside
 {
     margin-left: 3em;
-    padding: 0 1.2em 0 1.2em;
+    padding: 3em;
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
 }
@@ -296,44 +315,44 @@ aside
     height: 150px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    margin: 2em auto 2em auto;
+    border: 4px solid white;
     font-size: 16px;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 20px #f2f2f2;
+    margin-bottom: 2.2em;
 }
 
 .image1
 {
-    width: 140px;
-    height: 145px;
+    width: 160px;
+    height: 150px;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
-    border: 2px solid white;
+    box-shadow: 0 0 20px #f2f2f2;
 }
 
 .graphique
 {
     display: flex;
     justify-content: space-between;
-    padding: 1.5em 0.5em 0 0;
+    padding-bottom: 1.8em;
     font-weight: bold;
     font-size: 18px;
 }
 
 .etoiles1
 {
-    padding-left: 0.8em;
+    padding-left: 1em;
     color:#0065fc;
 }
 
 .far
 {
-    color: gray;
+    color: grey;
 }
 
 .nuitee
 {
-    padding: 0.3em;
-    padding-left: 12px;
+    padding: 0.5em 0 0.5em 1em;
 }
 
 .nuitee2
@@ -343,7 +362,7 @@ aside
 
 .etoiles2
 {
-    padding-top: 2.2em;
+    padding-top: 3.5em;
     color: #0065fc;
 }
 
@@ -358,7 +377,7 @@ aside
 /*Activities' beginning*/
 #s3
 {
-    padding: 3em;
+    margin: 3em;
 }
 
 #visites
@@ -372,7 +391,6 @@ aside
 {
     display: flex;
     justify-content: space-between;
-    align-content: center;
     align-items: center;
 }
     
@@ -380,7 +398,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 10px #f2f2f2;
     height: 100%;
 }
 
@@ -388,9 +406,8 @@ aside
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0 0 16px grey;
-    padding-bottom: 0.1em;
-    margin-bottom: 1.4em;
+    box-shadow: 0 0 10px #f2f2f2;
+    margin-bottom: 3.2em;
     height: 100%;
 }
 
@@ -398,7 +415,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
     height: 100%;
 }
@@ -407,9 +424,9 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
-    margin-bottom: 1em;
+    margin-bottom: 2.8em;
     height: 100%;
 }
 
@@ -418,7 +435,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 20px #f2f2f2;
     padding-bottom: 0.16em;
     height: 100%;
 }
@@ -427,51 +444,48 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 20px #f2f2f2;
     height: 100%;
 }
 
 .image2
 {
     width: 310px;
-    height: 492px;
+    height: 488px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
 .image3
 {
     width: 310px;
-    height: 242px;
+    height: 185px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
 .image4
 {
     width: 310px;
-    height: 170px;
+    height: 179px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
 .image5
 {
     width: 310px;
-    height: 210px;
+    height: 185px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
 h3
 {
     font-size: 16px;
     font-weight: 900;
-    padding-left: 0.6em;
+    padding: 1.5em 0 1.5em 1em;
+    margin: 0;
 }
 /*Activities' ending*/
 
