--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -1,7 +1,13 @@
 body
 {
     font-family: 'Raleway', sans-serif;
-    margin: auto;
+    margin: 0;
+}
+
+#main
+{
+    max-width: 1500px;
+    margin: 0 auto;
 }
 
 /*Header*/
@@ -19,60 +25,68 @@ nav ul
 {
     list-style: none;
     display: flex;
-}
-
-nav li 
-{
-    padding-top: 3em;
+    margin: 0;
+    padding: 3em 0 0 0;
+    border-top: solid #f2f2f2;
 }
 
 nav a
 {
     text-decoration: none;
     color: black;
-    margin: 1.8em;
+    padding-top: 3em;
+    margin: 2em;
 }
 
 nav a:hover
 {
     color: #0065fc;
-}
-
-nav li:hover
-{
     border-top: 2px solid #0065fc;
 }
 
-.sign-up
+.sign_up
 {
-    padding: 3em 0 0 1.8em;
-    background-color: unset;
-    border: none;
-    font-size: 16px;
+    color: #0065fc;
     font-weight: bold;
-    cursor: pointer;
+    margin: 0;
+    padding-top: 3em;
 }
 
-.sign-up:hover
+.sign_up:hover
 {
+    color: #0065fc;
     border-top: 2px solid #0065fc;
 }
-/*Navigation's ending*/
 
-h1
-{
-    font-size: 20px;
-}
+/*Navigation's ending*/
 
 /*Beginning's top*/
 #s1
 {
-    padding: 0 3em 0 3em;
+    padding: 3em 3em 0 3em;
+}
+
+h1
+{
+    font-size: 20px;
+    margin: 0;
+}
+
+.pcvpn
+{
+    margin: 0;
+    padding: 1em 0 1em;
+}
+
+#ville_pays::placeholder
+{
+    color: black;
+    font-weight: bold;
 }
 
 .logo
 {
-    padding-top: 3em;
+    padding-top: 2em;
 }
 
 /*Begin's search*/
@@ -95,8 +109,6 @@ input
     border: 2px solid #f2f2f2;
     font-size: 15px;
     padding: 1em;
-    font-weight: bold;
-    color: black;
 }
 
 .marqueur_2
@@ -152,7 +164,7 @@ a
 {
     color:#0065fc;
     background-color: #deebff;
-    padding: 0.9em;
+    padding: 1em;
     border-radius: 100%;
     margin: 0 0.7em 0 -1em;
 }
@@ -174,7 +186,7 @@ a
     background-color: white;
     font-size: 15px;
     font-weight: bold;
-    padding: 0.8em 1em 0.8em 0;
+    padding: 0.9em 1em 0.8em 0;
 }
 
 .i1:hover, .i2:hover, .i3:hover, .i4:hover
@@ -190,6 +202,8 @@ a
 {
     display: flex;
     align-items: center;
+    padding: 2em 0 2em;
+    margin: 0;
 }
 
 .information
@@ -205,65 +219,68 @@ a
 
 .result
 {
-    font-size: 16px;  
-    margin-right: 2em;
+    font-size: 16px;
 }
 /*Results'ending*/
 
 /*Top's Ending*/
 
 /*Accomodations'beginning*/
-.s2
+#s2
 {
     display: flex;
-    margin: 0 3em 0 3em;
+    margin: 0 3em;
 }
 
 #logements
 {
-    padding: 1.5em 0 1em 1.5em;
     font-size: 18px;
     font-weight: bold;
+    margin: 0;
+    padding-bottom: 2em;
 }
 
 #ah1
 {
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
-    /*padding: 1em 0 1em 0;*/
+    padding: 3em 2.5em 2em 2.5em;
+}
+
+a
+{
+    color:black;
 }
 
 .presentation
 {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-    align-content: center;
+    justify-content: space-between;
+    align-content: center; 
 }
 
-.vignette
+.vignettes
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
     padding-bottom: 0.5em;
     margin-bottom: 2.5em;
-    box-shadow: 0 0 16px grey;
-}
+    box-shadow: 0px 0px 16px red;
+}    
 
 .image
 {
-    width: 270px;
+    width: 235px;
     height: 150px;
     object-fit: cover;
     border-radius:20px 20px 0 0; 
-    border: 2px solid white;
+    border: 5px solid white;
 }
 
 .ap
 {
-    padding: 0 1em 2.5em 1.5em;
-    font-size: 16px;
-    font-weight: bold;
+    padding: 0;
 }
 
 .ap:hover
@@ -276,13 +293,19 @@ a
     padding-left:0.7em; 
     font-weight: bold;
 }
+
+.text_photo
+{
+    padding: 0 1em;
+    margin: 0;
+}
 /*Accomodations'ending*/
 
 /*Populars'beginning*/
 aside
 {
     margin-left: 3em;
-    padding: 0 1.2em 0 1.2em;
+    padding: 3em;
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
 }
@@ -295,175 +318,168 @@ aside
     height: 150px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    margin: 2em auto 2em auto;
+    border: 4px solid white;
     font-size: 16px;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 20px #f2f2f2;
+    margin-bottom: 2.2em;
 }
 
 .image1
 {
-    width: 140px;
-    height: 145px;
+    width: 160px;
+    height: 150px;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
-    border: 2px solid white;
 }
 
 .graphique
 {
     display: flex;
     justify-content: space-between;
-    padding: 2.3em 0.5em 0 0;
+    padding-bottom: 1.8em;
     font-weight: bold;
     font-size: 18px;
 }
 
 .etoiles1
 {
-    padding-left: 0.8em;
+    padding-left: 1em;
     color:#0065fc;
 }
 
 .far
 {
-    color: gray;
+    color: grey;
 }
 
 .nuitee
 {
-    padding: 0.3em;
-    padding-left: 12px;
+    padding: 0.5em 0 0.5em 1em;
 }
 
 .nuitee2
 {
-    padding-top: 0.3em;
+    padding: 0 0 1em 1em;
 }
 
 .etoiles2
 {
-    padding-top: 2.2em;
     color: #0065fc;
+    margin-left: 1em;
+    padding-top: 1em;
 }
 
 .legendebis
 {
     font-weight: bold;
-    padding-top: 0.3em;
+    padding: 1em 0 1em 1em;
 }
 
 /*Populars' ending*/
 
 /*Activities' beginning*/
-.s3
+#s3
 {
-    padding: 3em;
+    margin: 3em;
 }
 
 #visites
 {
     font-size: 18px;
     padding-bottom: 1em;
+    margin: 0;
 }
 
 .aa1
 {
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
 }
     
 .vp
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
-    height: 550px;
+    box-shadow: 0 0 10px #f2f2f2;
+    height: 100%;
 }
 
 .fp
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0 0 16px grey;
-    padding-bottom: 0.1em;
-    margin-bottom: 1.5em;
+    box-shadow: 0 0 10px #f2f2f2;
+    margin-bottom: 3.2em;
+    height: 100%;
 }
 
 .if
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
+    height: 100%;
 }
 
 .ndg
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
-    margin-bottom: 1em;
+    margin-bottom: 2.8em;
+    height: 100%;
 }
 
 .pl
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
+    box-shadow: 0 0 20px #f2f2f2;
     padding-bottom: 0.16em;
+    height: 100%;
 }
 
 .cal
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 16px grey;
-    height: 550px;
+    box-shadow: 0 0 20px #f2f2f2;
+    height: 100%;
 }
 
 .image2
 {
     width: 310px;
-    height: 495px;
+    height: 488px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
-.image3
+.image3, .image5
 {
     width: 310px;
-    height: 243px;
+    height: 185px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
 .image4
 {
     width: 310px;
-    height: 170px;
+    height: 179px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
-}
-
-.image5
-{
-    width: 310px;
-    height: 210px;
-    object-fit: cover;
-    border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 16px grey;
 }
 
 h3
 {
     font-size: 16px;
     font-weight: 900;
-    padding-left: 0.6em;
+    padding: 1.5em 0 1.5em 1em;
+    margin: 0;
 }
 /*Activities' ending*/
 
