--- a/style_resolution_haute.css
+++ b/style_resolution_haute.css
@@ -1,9 +1,80 @@
-@media screen and (max-width: 1640px)
+@media screen and (min-width: 1920px)
 {
-    #main
+    
+
+    #vistes, #s1, #s2, #s3, .aa1, footer, header, nav
     {
-        width: auto;
-        margin: auto;
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
+
+    .presentation
+    {
+        justify-content: space-between;
+        padding: 3em;
+    }
+
+    .vignettes
+    {
+        flex-basis: auto;
+    }
+    
+    .image
+    {
+        width: 310px;
+        height: 190px; 
+    }
+
+    .p1
+    {
+        width: 400px; 
+        height: 200px; 
+    }
+
+    .image1
+    {
+        width: 190px; 
+        height: 195px;
+    }
+
+    .graphique
+    {
+        
+        padding: 2.3em 0 0 0;    
+    }
+    
+    .ap
+    {
+        padding: 0 0 2.5em 1.5em;
+    }
+
+    #logements
+    {
+        padding: 2em 0 1em 1.5em; 
+    }
+
+    .image2
+    {
+        width: 360px; 
+        height: 553px; 
+    }
+
+    .image3
+    {
+        width: 360px;
+        height: 280px;
+    }
+
+    .image4
+    {
+        width: 360px;
+        height: 191px;
+    }
+
+    .image5
+    {
+       width: 360px;
+       height: 240px;
     }
 
 }
