--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -2,7 +2,7 @@
 {
     #main
     {
-        margin: 0;
+        margin: 0 /*auto*/;
     }
 
 /*Header's beginnig*/
@@ -55,6 +55,11 @@
         font-weight: bold;
     }
 
+    .signup
+    {
+        order: 1;
+        padding: 1.2em 1.2em 0 1.2em;
+    }
     .sign_up:hover, .signup:hover
     {
         border: none;
@@ -63,15 +68,13 @@
     .n1
     {
         order: 1;
-        margin: 2em 0 0em -4em;
-        width: 50%;
+        margin: 2em 0 0 -4em;
         padding-bottom: 1em;
     }
 
     .n2
     {
         margin: 2em 0 0em 1em;
-        width: 50%;
         padding-bottom: 1em;
     }
 
@@ -91,6 +94,7 @@
     h1
     {
         font-size: 25px;
+        margin-right: 1.2em;
     }
     /*Header's ending*/
 
@@ -102,16 +106,23 @@
 
     #s1
     {
-        padding: 0 1.2em 0 1.2em;
+        padding: 0 0 0 1.2em;
+        margin: 0;
+        /*max-width: 413px;*/
+    }
+
+    .pcvpn
+    {
+        margin: 0;
+        padding: 1em 1.2em 2em 0;
     }
 
     .recherche2
     {
         display: flex;
         justify-content: center;
-        align-items: center;
-        width: 337px;
-        height: 55px;
+        /*align-items: center;*/
+        max-width: 375px;
     }
 
     .marqueur_1
@@ -126,7 +137,7 @@
     border: 2px solid #f2f2f2;
     font-weight: bold;
     color: black;
-    width: 250px;
+    min-width: 75%;
     }
 
     .marqueur_2
@@ -172,7 +183,7 @@
     {
         margin: auto;
         flex-flow: column-reverse wrap;
-        width: 375px;
+        max-width: 413px;
     }
 
     #ah1
@@ -180,7 +191,7 @@
         background-color: white;
         margin: 0;
         padding: 0 1.2em 0 1.2em;
-        width: 100%; 
+        width: 90%; 
         display: block;
     }
 
@@ -189,8 +200,9 @@
         margin: 0;
         padding: 0;
         border-radius: 0; 
-        width: 400px;
         order: 1;
+        display: block;
+        width: 100%;
     }
 
     .graphique
@@ -209,24 +221,27 @@
     #logements
     {
         font-size: 20px;
-        padding: 2.5em 0 2em 1.2em;
+        padding: 2.5em 0 2em 0;
     }
 
     .presentation
     {
-        display: inline-block;
-        max-width: 340px;
+        display: block;
+        max-width: 413px;
+        box-sizing: content-box;
     }
 
     .vignettes
     {
-        max-width: 350px;
+        display: block;
+        box-sizing: content-box;
     }
 
     .image
     {
-        width: 330px;
+        width: 97%;
         height: 150px;
+        box-sizing: content-box;
     }
 
     .ap
@@ -239,30 +254,35 @@
     #s3
     {
         margin: 0;
+        max-width: 413px;
     }
 
     .aa1
     {
-        flex-flow: column nowrap;
+        display: block;
+        margin: 0;
+        padding: 0 1.2em 0 1.2em;
+        width: 90%;
     }
 
     .image2, .image3, .image4, .image5
     {
-        width: 340px;
+        width: 100%;
         height: 150px;
+        box-sizing: content-box;
     }
 
     .vp, .fp, .if, .cal, .ndg, .pl
     {
         margin-bottom: 2em;
         max-width: 100%;
-        box-shadow: 0 0 10px red;
+        box-shadow: 0 0 10px #f2f2f2;
+        box-sizing: content-box;
     }
-    
     
     #visites
     {
-        padding-left: 0.9em;
+        padding-left: 1.1em;
         font-size: 20px;
     }
     
