--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -34,25 +34,33 @@ nav a
 {
     text-decoration: none;
     color: black;
-    padding-top: 3em;
-    margin: 2em;
+    /*margin: 2.5em;*/
 }
 
 nav a:hover
 {
     color: #0065fc;
     border-top: 2px solid #0065fc;
+    padding-top: 3em;
+}
+
+.n1
+{
+    padding-right: 3em;
+}
+
+.n2
+{
+    padding-right: 3em;
 }
 
 .sign_up
 {
     color: #0065fc;
     font-weight: bold;
-    margin: 0;
-    padding-top: 3em;
 }
 
-.sign_up:hover
+.sign_up:hover,
 {
     color: #0065fc;
     border-top: 2px solid #0065fc;
@@ -266,7 +274,7 @@ a
     border-radius: 20px 20px 20px 20px;
     padding-bottom: 0.5em;
     margin-bottom: 2.5em;
-    box-shadow: 0px 0px 16px red;
+    box-shadow: 0px 0px 16px #f2f2f2;
 }    
 
 .image
@@ -326,7 +334,7 @@ aside
 
 .image1
 {
-    width: 160px;
+    width: 140px;
     height: 150px;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
@@ -339,6 +347,7 @@ aside
     padding-bottom: 1.8em;
     font-weight: bold;
     font-size: 18px;
+    width: 99%;
 }
 
 .etoiles1
