--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -1,9 +1,15 @@
-@media screen and (max-width: 1024px)
+@media screen and (max-width: 720px)
 {
+    #main
+    {
+        margin: 0 /*auto*/;
+    }
+
+/*Header's beginnig*/
     header
     {
         padding: 0;
-        margin: 1.2em 0 0 0;
+        margin: 1.2em 0;
         border-bottom: 2px solid #f2f2f2;
     }
 
@@ -12,28 +18,19 @@
         padding: 0 0 1em 1.2em;
     }
     
-    nav
-    {
-        width: 100%;
-    }
-
+    /*Navigation's beginning*/
+    
     nav ul
     {
         flex-flow: row-reverse wrap-reverse;
         justify-content: space-between;
         padding: 0;
-        margin: 0; 
+        border-top: none;
     }
 
     nav li
     {
         padding: 0; 
-    }
-
-    nav li:hover
-    {
-        border-bottom: 2px solid #0065fc;
-        border-top: none;
     }
 
     nav a
@@ -42,58 +39,90 @@
         padding-right: 1.25em;
     }
 
-    .n3
+    .sign_up
     {
         order: 1;
-        padding: 1.2em 1.2em 0em 0;
+        padding: 1.2em 0;
         background-color: unset;
         border: none;
         font-size: 16px;
         cursor: pointer;
     }
 
-    .sign-up
+    .sign_up
     {
         color:#0065fc;
         font-weight: bold;
     }
 
-    .sign-up:hover
+    .signup
+    {
+        order: 1;
+        padding: 1.2em 1.2em 0 1.2em;
+    }
+    .sign_up:hover, .signup:hover
     {
         border: none;
     }
+
     .n1
     {
         order: 1;
-        margin: 2em 0 0em -4em;
-        width: 50%;
-        text-align: center;
+        margin: 2em 0 0 -4em;
         padding-bottom: 1em;
     }
 
     .n2
     {
         margin: 2em 0 0em 1em;
-        width: 50%;
         padding-bottom: 1em;
-        text-align: center;
     }
 
+    nav a:hover
+    {
+        border-top: none; 
+        padding-bottom: 1em;
+    }
+
+    nav a:active
+    {
+        border-bottom: 2px solid #0065fc;
+        padding-bottom: 1em;
+    }
+
+    /*Navigation's ending*/
     h1
     {
         font-size: 25px;
+        margin-right: 1.2em;
     }
-    
+    /*Header's ending*/
+
+    /*Searching's beginning*/
     .recherche1
     {
        display: none;
     }
 
+    #s1
+    {
+        padding: 0 0 0 1.2em;
+        margin: 0;
+        /*max-width: 413px;*/
+    }
+
+    .pcvpn
+    {
+        margin: 0;
+        padding: 1em 1.2em 2em 0;
+    }
+
     .recherche2
     {
         display: flex;
-        align-items: center;
-        /*margin: 1em 1.2em 1.5em 1.2em;*/
+        justify-content: center;
+        /*align-items: center;*/
+        max-width: 375px;
     }
 
     .marqueur_1
@@ -101,17 +130,14 @@
     border-radius: 20px 0 0 20px;
     background-color: #f2f2f2;      
     font-size: 18px;
-    padding: 1.3em;
     }
 
     input
     {
     border: 2px solid #f2f2f2;
-    font-size: 15px;
-    padding: 1.5em;
     font-weight: bold;
     color: black;
-    width: 270px;
+    min-width: 75%;
     }
 
     .marqueur_2
@@ -121,20 +147,18 @@
     color: white;
     border: 1px solid #f2f2f2; 
     font-size: 15px;
-    padding: 1.6em;
     margin-left: -1em;
-    flex-shrink: 0;
-    overflow: hidden;
     }
+
+    #ville_pays::placeholder 
+    {
+    color: rgba(0, 0, 0, 1);
+    font-weight: bold;
+    }   
 
     .marqueur_2:hover
     {
     cursor: pointer;
-    }
-
-    #s1
-    {
-        padding: 0 1.2em 0 1.2em;
     }
 
     .i1, .i3, .i2, .i4
@@ -144,102 +168,122 @@
 
     .title_f
     {
-        padding: 1em 1.2em 0 1.2em;
         font-size: 18px;
     }
 
-    .results_info
+    .options_f
     {
-        padding: 0 1.2em 0 1.2em;
+        padding: 0;
     }
 
+     /*Top's ending*/
+
+    /*Accomodations' beginning*/ 
     #s2
     {
-        margin: 0;
+        margin: auto;
         flex-flow: column-reverse wrap;
+        max-width: 413px;
     }
 
     #ah1
     {
         background-color: white;
-        /*padding: 2em 1.2em 0 1.2em;*/
+        margin: 0;
+        padding: 0 1.2em 0 1.2em;
+        width: 90%; 
+        display: block;
     }
+
     aside
     {
         margin: 0;
-        padding: 0; 
+        padding: 0;
         border-radius: 0; 
+        order: 1;
+        display: block;
+        width: 100%;
     }
 
     .graphique
     {
-        padding: 3em 1em 0 1em;
         font-size: 20px;
+        width: 88%;
+        padding: 2.5em 0 2em 1.2em;
     }
 
     .p1
     {
-        width: 343px;
-    }
-
-    .image
-    {
-        width: 343px;
+        width: auto;
+        margin: 0 1.2em 1em 1.2em;
     }
 
     #logements
     {
-        padding: 1em 0 1em 1.2em;
         font-size: 20px;
+        padding: 2.5em 0 2em 0;
+    }
+
+    .presentation
+    {
+        display: block;
+        max-width: 413px;
+        box-sizing: content-box;
+    }
+
+    .vignettes
+    {
+        display: block;
+        box-sizing: content-box;
+    }
+
+    .image
+    {
+        width: 97%;
+        height: 150px;
+        box-sizing: content-box;
     }
 
     .ap
     {
-        padding: 1em 0 2.5em 1.2em;
+        padding: 0 0 2.5em 0;
     }
+    /*Accomodations' ending
     
     /*Activities'beginning*/
-
     #s3
     {
-        padding: 0;
+        margin: 0;
+        max-width: 413px;
     }
 
     .aa1
     {
-        flex-flow: column nowrap;
+        display: block;
+        margin: 0;
         padding: 0 1.2em 0 1.2em;
-    }
-
-    .vp, .cal
-    {
-        width: 343px;
-        height: 150px;
-        margin: 1em 0 1em 0;
-        padding-bottom: 3.5em;
-    }
-
-    .fp
-    {
-        margin-bottom: 1em;
-    }
-
-    .ndgpl
-    {
-        margin-bottom: 1em;
+        width: 90%;
     }
 
     .image2, .image3, .image4, .image5
     {
-        width: 343px;
-        height: 150px; 
-
+        width: 100%;
+        height: 150px;
+        box-sizing: content-box;
     }
 
+    .vp, .fp, .if, .cal, .ndg, .pl
+    {
+        margin-bottom: 2em;
+        max-width: 100%;
+        box-shadow: 0 0 10px #f2f2f2;
+        box-sizing: content-box;
+    }
+    
     #visites
     {
-            padding: 0 1.2em 1em 1.2em;
-            font-size: 20px;
+        padding-left: 1.1em;
+        font-size: 20px;
     }
     
     footer
@@ -260,8 +304,7 @@
 
     .title_ap
     {
-        padding: 1em;
-        padding-right: 0;
+        padding: 3em 0 0 1em;
     }
 }
 
