--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -26,38 +26,46 @@ nav ul
     list-style: none;
     display: flex;
     margin: 0;
-}
-
-nav li 
-{
-    padding-top: 3em;
+    padding: 3em 0 0 0;
+    border-top: solid #f2f2f2;
 }
 
 nav a
 {
     text-decoration: none;
     color: black;
-    margin: 1.8em;
+    /*margin: 2.5em;*/
 }
 
 nav a:hover
 {
     color: #0065fc;
+    border-top: 2px solid #0065fc;
+    padding-top: 3em;
 }
 
-nav li:hover
+.n1
 {
+    padding-right: 3em;
+}
+
+.n2
+{
+    padding-right: 3em;
+}
+
+.sign_up
+{
+    color: #0065fc;
+    font-weight: bold;
+}
+
+.sign_up:hover,
+{
+    color: #0065fc;
     border-top: 2px solid #0065fc;
 }
 
-.sign-up
-{
-    background-color: unset;
-    border: none;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-}
 /*Navigation's ending*/
 
 /*Beginning's top*/
@@ -229,7 +237,6 @@ a
 #s2
 {
     display: flex;
-    width: auto;
     margin: 0 3em;
 }
 
@@ -246,7 +253,11 @@ a
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
     padding: 3em 2.5em 2em 2.5em;
-   
+}
+
+a
+{
+    color:black;
 }
 
 .presentation
@@ -262,13 +273,13 @@ a
     background-color: white;
     border-radius: 20px 20px 20px 20px;
     padding-bottom: 0.5em;
-    margin-bottom: 2em;
-    box-shadow: 0 0 16px #f2f2f2;
-}
+    margin-bottom: 2.5em;
+    box-shadow: 0px 0px 16px #f2f2f2;
+}    
 
 .image
 {
-    width: 250px;
+    width: 235px;
     height: 150px;
     object-fit: cover;
     border-radius:20px 20px 0 0; 
@@ -323,11 +334,10 @@ aside
 
 .image1
 {
-    width: 160px;
+    width: 140px;
     height: 150px;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
-    box-shadow: 0 0 20px #f2f2f2;
 }
 
 .graphique
@@ -337,6 +347,7 @@ aside
     padding-bottom: 1.8em;
     font-weight: bold;
     font-size: 18px;
+    width: 99%;
 }
 
 .etoiles1
@@ -357,19 +368,20 @@ aside
 
 .nuitee2
 {
-    padding-top: 0.3em;
+    padding: 0 0 1em 1em;
 }
 
 .etoiles2
 {
-    padding-top: 3.5em;
     color: #0065fc;
+    margin-left: 1em;
+    padding-top: 1em;
 }
 
 .legendebis
 {
     font-weight: bold;
-    padding-top: 0.3em;
+    padding: 1em 0 1em 1em;
 }
 
 /*Populars' ending*/
@@ -430,7 +442,6 @@ aside
     height: 100%;
 }
 
-
 .pl
 {
     border-radius: 20px 20px 20px 20px;
@@ -456,7 +467,7 @@ aside
     border-radius: 20px 20px 0 0;
 }
 
-.image3
+.image3, .image5
 {
     width: 310px;
     height: 185px;
@@ -468,14 +479,6 @@ aside
 {
     width: 310px;
     height: 179px;
-    object-fit: cover;
-    border-radius: 20px 20px 0 0;
-}
-
-.image5
-{
-    width: 310px;
-    height: 185px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
