--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -16,25 +16,34 @@ header
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 0 3em 0 3em;
+    padding: 0em 3em 0 3em;
 }
 
+.logo
+{
+    padding-top: 2em;
+    flex-grow: 1;
+}
 
 /*Navigation's beginning*/
+nav
+{
+    padding-top: 3em;
+}
+
 nav ul
 {
     list-style: none;
     display: flex;
     margin: 0;
-    padding: 3em 0 0 0;
-    border-top: solid #f2f2f2;
+    padding: 0;
 }
 
 nav a
 {
     text-decoration: none;
     color: black;
-    /*margin: 2.5em;*/
+    margin: 2.5em;
 }
 
 nav a:hover
@@ -46,24 +55,32 @@ nav a:hover
 
 .n1
 {
-    padding-right: 3em;
+    /*padding-right: 3em;*/
 }
 
 .n2
 {
-    padding-right: 3em;
+    /*padding-right: 3em;*/
 }
 
-.sign_up
+.signup
 {
     color: #0065fc;
     font-weight: bold;
+    margin: 1.8em 1.5em;
+    padding: 1.2em;
+    font-size: inherit;
+    border: none;
+    border-radius: 16px;
+    background-color: unset;
+    cursor: pointer;
 }
 
-.sign_up:hover,
+.signup:hover
 {
     color: #0065fc;
-    border-top: 2px solid #0065fc;
+    background-color: #0065fc;
+    color: white;
 }
 
 /*Navigation's ending*/
@@ -90,11 +107,6 @@ h1
 {
     color: black;
     font-weight: bold;
-}
-
-.logo
-{
-    padding-top: 2em;
 }
 
 /*Begin's search*/
