--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -17,6 +17,7 @@ header
     justify-content: space-between;
     align-items: flex-start;
     padding: 0em 3em 0 3em;
+    border-top: 2px solid #f2f2f2;
 }
 
 .logo
@@ -36,7 +37,6 @@ nav ul
     list-style: none;
     display: flex;
     margin: 0;
-    padding: 0;
 }
 
 nav a
@@ -380,20 +380,20 @@ aside
 
 .nuitee2
 {
-    padding: 0 0 1em 1em;
+    /*padding: 0 0 1em 1em;*/
 }
 
 .etoiles2
 {
     color: #0065fc;
-    margin-left: 1em;
+    /*margin-left: 1em;*/
     padding-top: 1em;
 }
 
 .legendebis
 {
     font-weight: bold;
-    padding: 1em 0 1em 1em;
+    padding: 1em 0;
 }
 
 /*Populars' ending*/
@@ -474,7 +474,7 @@ aside
 .image2
 {
     width: 310px;
-    height: 488px;
+    height: 489px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -482,7 +482,7 @@ aside
 .image3, .image5
 {
     width: 310px;
-    height: 185px;
+    height: 187px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -490,7 +490,7 @@ aside
 .image4
 {
     width: 310px;
-    height: 179px;
+    height: 182px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
