--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -1,9 +1,9 @@
-@media screen and (max-width: 720px)
+@media all and (min-width: 320px) and (max-width: 720px)
 {
     #main
     {
         margin:  0 auto;
-        min-width: 375px;
+        min-width: 300px;
     }
 
 /*Header's beginnig*/
@@ -21,7 +21,6 @@
     }
     
     /*Navigation's beginning*/
-    
     nav
 {
     padding-top: 0;
@@ -46,13 +45,16 @@
         margin: 0;
     }
 
-    /*.signup
+    .signup
     {
-        margin: 1.8em 0 0 -5.5em;
-    }*/
+        margin: 3em 1.2em 0 0;
+        padding: 0; 
+    }
+
     .signup:hover
     {
         border: none;
+
     }
 
     .n1
@@ -63,7 +65,7 @@
 
     .n2
     {
-        margin: 5em 0 1em 4.5em;
+        margin: 5em 0 1em 4em;
         min-width: 100px;
     }
 
@@ -78,13 +80,15 @@
         border-bottom: 2px solid #0065fc;
         padding-bottom: 1em;
     }
-
     /*Navigation's ending*/
+    /*Header's ending*/
+
     h1
     {
         font-size: 25px;
+        padding-top: 2em;
     }
-    /*Header's ending*/
+    
 
     /*Searching's beginning*/
     .recherche1
@@ -108,7 +112,6 @@
     {
         display: flex;
         justify-content: center;
-        /*max-width: 375px;*/
     }
 
     .marqueur_1
@@ -169,7 +172,6 @@
     {
         margin: auto;
         flex-flow: column-reverse wrap;
-        /*max-width: 413px;*/
     }
 
     #ah1
@@ -177,7 +179,6 @@
         background-color: white;
         margin: 0;
         padding: 0 1.2em 0 1.2em;
-        width: 90%; 
         display: block;
     }
 
@@ -193,7 +194,7 @@
     .graphique
     {
         font-size: 20px;
-        width: 88%;
+        width: 87%;
         padding: 2.5em 0 2em 1.2em;
     }
 
@@ -218,7 +219,6 @@
     .presentation
     {
         display: block;
-        /*max-width: 413px;*/
         box-sizing: content-box;
     }
 
@@ -245,7 +245,6 @@
     #s3
     {
         margin: 0;
-        /*max-width: 413px;*/
     }
 
     .aa1
@@ -253,7 +252,6 @@
         display: block;
         margin: 0;
         padding: 0 1.2em 0 1.2em;
-        /*width: 90%;*/
     }
 
     .image2, .image3, .image4, .image5
@@ -303,3 +301,22 @@
     }
 }
 
+@media screen and (max-width:350px)
+{
+    .logo
+    {
+        padding: 2em 0 0 1.2em; 
+    }
+
+    .n2
+    {
+        margin: 5em 0 1em 2em;
+    }
+
+    .image1
+    {
+        width: 110px; 
+    }
+
+}
+    
