--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -261,7 +261,7 @@
         box-sizing: content-box;
     }
 
-    .vp, .fp, .if, .cal, .ndg, .pl
+    .axl, .fp, .if, .ndg, .pl
     {
         margin-bottom: 2em;
         max-width: 100%;
