--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -264,7 +264,7 @@ a
 {
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
-    padding: 3em 2.5em 2em 2.5em;
+    padding: 3em 3em 2em 3em;
 }
 
 a
@@ -418,7 +418,7 @@ aside
     align-items: center;
 }
     
-.vp
+.vp, .cal 
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
@@ -458,16 +458,8 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 20px #f2f2f2;
+    box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.16em;
-    height: 100%;
-}
-
-.cal
-{
-    border-radius: 20px 20px 20px 20px;
-    background-color: white;
-    box-shadow: 0 0 20px #f2f2f2;
     height: 100%;
 }
 
