--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -6,7 +6,7 @@ body
 
 #main
 {
-    max-width: 1500px;
+    /*max-width: 1500px;*/
     margin: 0 auto;
 }
 
@@ -51,16 +51,6 @@ nav a:hover
     color: #0065fc;
     border-top: 2px solid #0065fc;
     padding-top: 3em;
-}
-
-.n1
-{
-    /*padding-right: 3em;*/
-}
-
-.n2
-{
-    /*padding-right: 3em;*/
 }
 
 .signup
@@ -159,7 +149,6 @@ input
     flex-flow: row wrap;
     align-items: center;
 }
-
 
 .title_f
 {
@@ -260,7 +249,7 @@ a
     padding-bottom: 2em;
 }
 
-#ah1
+.ah1
 {
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
@@ -284,7 +273,7 @@ a
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    padding-bottom: 0.5em;
+    padding-bottom: 0.8em;
     margin-bottom: 2.5em;
     box-shadow: 0px 0px 16px #f2f2f2;
 }    
@@ -376,24 +365,24 @@ aside
 .nuitee
 {
     padding: 0.5em 0 0.5em 1em;
+    margin: 0;
 }
 
 .nuitee2
 {
-    /*padding: 0 0 1em 1em;*/
+    margin: 0;
 }
 
 .etoiles2
 {
     color: #0065fc;
-    /*margin-left: 1em;*/
-    padding-top: 1em;
+    padding-top: 2em;
 }
 
 .legendebis
 {
     font-weight: bold;
-    padding: 1em 0;
+    padding: 1em 0 1em 0;
 }
 
 /*Populars' ending*/
@@ -425,6 +414,7 @@ aside
     background-color: white;
     box-shadow: 0 0 10px #f2f2f2;
     height: 100%;
+    /*width: 340px;*/
 }
 
 .fp
@@ -434,6 +424,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     margin-bottom: 3.2em;
     height: 100%;
+    /*width: 310px;*/
 }
 
 .if
@@ -443,6 +434,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
     height: 100%;
+    /*width: 310px;*/
 }
 
 .ndg
@@ -453,6 +445,7 @@ aside
     padding-bottom: 0.1em;
     margin-bottom: 2.8em;
     height: 100%;
+    /*width: 310px;*/
 }
 
 .pl
@@ -462,11 +455,12 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.16em;
     height: 100%;
+    /*width: 310px;*/
 }
 
 .image2
 {
-    width: 320px;
+    /*width: 100%;*/
     height: 490px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
@@ -474,7 +468,7 @@ aside
 
 .image3, .image5
 {
-    width: 310px;
+    /*width: 100%;*/
     height: 187px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
@@ -482,7 +476,7 @@ aside
 
 .image4
 {
-    width: 310px;
+    /*width: 100%;*/
     height: 182px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
